metadata/force-app/main/default/objects/Delegation_of_Authority__c/Delegation_of_Authority__c.object-meta.xml
<CustomObject>
    <description>BODEV-76: Custom Object for Delegation of Authority</description>
    <label>Delegation of Authority</label>
    <nameField>
        <displayFormat>DOA-{000000}</displayFormat>
        <label>DoA Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delegation of Authorities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>