metadata/force-app/main/default/objects/Delegation_of_Authority__c/fields/Approval_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Approval_Finalized__c</fullName>
    <description>BODEV-76: Timestamp when DoA approval request was finalized</description>
    <inlineHelpText>Timestamp when DoA approval request was finalized</inlineHelpText>
    <label>Approval Finalized</label>
    <type>DateTime</type>
</CustomField>