metadata/force-app/main/default/objects/Delegation_of_Authority__c/fields/Approval_Finalized_Date_GMT__c.field-meta.xml
<CustomField>
    <fullName>Approval_Finalized_Date_GMT__c</fullName>
    <description>BODEV-743: Date field to capture Date of Approval Finalized field in GMT.</description>
    <label>Approval Finalized Date (GMT)</label>
    <type>Date</type>
</CustomField>