metadata/force-app/main/default/objects/Delegation_of_Authority__c/fields/Approval_Requested__c.field-meta.xml
<CustomField>
    <fullName>Approval_Requested__c</fullName>
    <description>BODEV-76: Timestamp when DoA approval request was submitted</description>
    <inlineHelpText>Timestamp when DoA approval request was submitted</inlineHelpText>
    <label>Approval Requested</label>
    <type>DateTime</type>
</CustomField>