metadata/force-app/main/default/objects/Delegation_of_Authority__c/fields/Approval_Requested_Date_GMT__c.field-meta.xml
<CustomField>
    <fullName>Approval_Requested_Date_GMT__c</fullName>
    <description>BODEV-743: Date field to capture Date of Approval Requested field in GMT.</description>
    <label>Approval Requested Date (GMT)</label>
    <type>Date</type>
</CustomField>