metadata/force-app/main/default/objects/Delegation_of_Authority__c/fields/ARR__c.field-meta.xml
<CustomField>
    <fullName>ARR__c</fullName>
    <description>BODEV-76: Currency field to capture the ARR amount at the time of DoA process triggered. Updated by the Flow for DoA process.</description>
    <inlineHelpText>COO has full authority for any deal up to 30k ARR, except package deals.</inlineHelpText>
    <label>ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>