metadata/force-app/main/default/objects/Delegation_of_Authority__c/fields/ARR_Before_Discount__c.field-meta.xml
<CustomField>
    <fullName>ARR_Before_Discount__c</fullName>
    <description>BODEV-76: Filed to capture ARR before discount (sum of Default Price x Quantity of recurring OLIs)</description>
    <inlineHelpText>ARR before discount (sum of Default Price x Quantity of recurring OLIs)</inlineHelpText>
    <label>ARR Before Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>