metadata/force-app/main/default/objects/Delegation_of_Authority__c/fields/ARR_Discount__c.field-meta.xml
<CustomField>
    <fullName>ARR_Discount__c</fullName>
    <description>BODEV-76: Stores the calculated discount % on ARR against the sum of default price</description>
    <inlineHelpText>Stores the calculated discount % on ARR against the sum of default price. Only includes products with positive quantity.</inlineHelpText>
    <label>ARR Discount (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>