metadata/force-app/main/default/objects/Delegation_of_Authority__c/fields/Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term__c</fullName>
    <description>Used to indicate if contract term is less than or greater than 1 year on opportunity or not.</description>
    <label>Contract Term</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>