metadata/force-app/main/default/objects/Delegation_of_Authority__c/fields/Contraction_ARR__c.field-meta.xml
<CustomField>
    <fullName>Contraction_ARR__c</fullName>
    <description>BODEV-673: Field to capture Contraction amount. Only filled in case of Downsell or Renewal with contraction.</description>
    <label>Contraction ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>