metadata/force-app/main/default/objects/Delegation_of_Authority__c/fields/Contraction_Percent__c.field-meta.xml
<CustomField>
    <fullName>Contraction_Percent__c</fullName>
    <description>BODEV-673: Field to capture % of Contraction against the total ARR. Only filled in case of Downsell or Renewal with contraction.</description>
    <label>Contraction Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>