metadata/force-app/main/default/objects/Delegation_of_Authority__c/fields/Discount_ARR__c.field-meta.xml
<CustomField>
    <fullName>Discount_ARR__c</fullName>
    <formula>IF(Opportunity__r.ARR_manual__c  &gt;=0 ,(Opportunity__r.Discount_Amount_ARR__c / Opportunity__r.ARR_manual__c ), 0)</formula>
    <label>% Discount ARR (test for doa 25)</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>