metadata/force-app/main/default/objects/Delegation_of_Authority__c/fields/Discount_extending_past_the_initial_term__c.field-meta.xml
<CustomField>
    <fullName>Discount_extending_past_the_initial_term__c</fullName>
    <defaultValue>false</defaultValue>
    <description>test for doa 25</description>
    <label>Discount extending past the initial term</label>
    <type>Checkbox</type>
</CustomField>