metadata/force-app/main/default/objects/Delegation_of_Authority__c/fields/Discount_on_unbundled_remaining_SKUs__c.field-meta.xml
<CustomField>
    <fullName>Discount_on_unbundled_remaining_SKUs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>test for doa 25</description>
    <label>Discount on unbundled remaining SKUs</label>
    <type>Checkbox</type>
</CustomField>