metadata/force-app/main/default/objects/Delegation_of_Authority__c/fields/Discount_One_Off__c.field-meta.xml
<CustomField>
    <fullName>Discount_One_Off__c</fullName>
    <formula>IF((Opportunity__r.One_off__c &gt;= 0), 
( Opportunity__r.Discount_Amount_One_off__c / Opportunity__r.One_off__c), 
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Discount One Off (test for doa 25)</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>