metadata/force-app/main/default/objects/Delegation_of_Authority__c/fields/DoA_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>DoA_Approval_Status__c</fullName>
    <description>BODEV-76: Picklist to store approval status. Updated by process/flow.</description>
    <label>DoA Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DoA_Approval_Status</valueSetName>
    </valueSet>
</CustomField>