metadata/force-app/main/default/objects/Delegation_of_Authority__c/fields/DoA_Approver__c.field-meta.xml
<CustomField>
    <fullName>DoA_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>BODEV-76: User who finalized the DoA approval request</description>
    <label>DoA Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DoA_Approver</relationshipName>
    <type>Lookup</type>
</CustomField>