metadata/force-app/main/default/objects/Delegation_of_Authority__c/fields/DoA_Level_Contraction__c.field-meta.xml
<CustomField>
    <fullName>DoA_Level_Contraction__c</fullName>
    <description>BODEV-673: Indicates DoA level for Contraction</description>
    <label>DoA Level: Contraction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DoA_Level</valueSetName>
    </valueSet>
</CustomField>