metadata/force-app/main/default/objects/Delegation_of_Authority__c/fields/DoA_Level_One_off_Discount__c.field-meta.xml
<CustomField>
    <fullName>DoA_Level_One_off_Discount__c</fullName>
    <description>BODEV-76: Indicates which DoA level is required for One-off discount</description>
    <inlineHelpText>Indicates which DoA level is required for One-off discount</inlineHelpText>
    <label>DoA Level: One-off Discount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DoA_Level</valueSetName>
    </valueSet>
</CustomField>