metadata/force-app/main/default/objects/Delegation_of_Authority__c/fields/DoA_Level_Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>DoA_Level_Payment_Term__c</fullName>
    <description>BODEV-76: Indicates which DoA level is required for payment period</description>
    <inlineHelpText>Indicates which DoA level is required for payment period</inlineHelpText>
    <label>DoA Level: Payment Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DoA_Level</valueSetName>
    </valueSet>
</CustomField>