metadata/force-app/main/default/objects/Delegation_of_Authority__c/fields/DoA_Requester__c.field-meta.xml
<CustomField>
    <fullName>DoA_Requester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>BODEV-76: User who launched DoA approval process</description>
    <label>DoA Requester</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DoA_Requester</relationshipName>
    <type>Lookup</type>
</CustomField>