metadata/force-app/main/default/objects/Delegation_of_Authority__c/fields/Invoice_Period__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Period__c</fullName>
    <description>BODEV-76: Stores the value of Invoice Period on Opportunity</description>
    <inlineHelpText>Frequency of invoice in months</inlineHelpText>
    <label>Invoice Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>