metadata/force-app/main/default/objects/Delegation_of_Authority__c/fields/Invoice_Period_formula__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Period_formula__c</fullName>
    <formula>Opportunity__r.Invoice_period__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Period test doa 25</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>