metadata/force-app/main/default/objects/Delegation_of_Authority__c/fields/Is_Latest_DoA__c.field-meta.xml
<CustomField>
    <fullName>Is_Latest_DoA__c</fullName>
    <description>BODEV-76: Indicates whether the record is the latest DoA for the associated Opportunity</description>
    <formula>NOT(ISBLANK(Opportunity__r.Latest_DoA__c)) &amp;&amp; Id = Opportunity__r.Latest_DoA__r.Id</formula>
    <inlineHelpText>Indicates whether the record is the latest DoA for the associated Opportunity</inlineHelpText>
    <label>Is Latest DoA</label>
    <type>Checkbox</type>
</CustomField>