metadata/force-app/main/default/objects/Delegation_of_Authority__c/fields/OEM_Partner__c.field-meta.xml
<CustomField>
    <fullName>OEM_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>BODEV-683: Lookup field to capture OEM/Partner field from the Opp.</description>
    <label>OEM / Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Delegation of Authorities</relationshipLabel>
    <relationshipName>Delegation_of_Authorities</relationshipName>
    <type>Lookup</type>
</CustomField>