metadata/force-app/main/default/objects/Delegation_of_Authority__c/fields/of_Month_Delayed_Rent_Free__c.field-meta.xml
<CustomField>
    <fullName>of_Month_Delayed_Rent_Free__c</fullName>
    <description>Used to capture the number of months of delay in subscription or invoicing and rent free.</description>
    <label># of Month Delayed/Free Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>