metadata/force-app/main/default/objects/Delegation_of_Authority__c/fields/One_off__c.field-meta.xml
<CustomField>
    <fullName>One_off__c</fullName>
    <description>BODEV-76: Currency field to capture the One-off amount at the time of DoA process triggered. Updated by the Flow for DoA process.</description>
    <label>One-off</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>