metadata/force-app/main/default/objects/Delegation_of_Authority__c/fields/One_off_Discount__c.field-meta.xml
<CustomField>
    <fullName>One_off_Discount__c</fullName>
    <description>BODEV-76: Stores the calculated discount % on One-off against the sum of default price</description>
    <inlineHelpText>Stores the calculated discount % on One-off against the sum of default price</inlineHelpText>
    <label>One-off Discount (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>