metadata/force-app/main/default/objects/Delegation_of_Authority__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>BODEV-76: Opportunity to which the DoA record is associated to.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Delegation of Authorities</relationshipLabel>
    <relationshipName>Delegation_of_Authorities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>