metadata/force-app/main/default/objects/Delegation_of_Authority__c/fields/Primary_Reason_for_DoA__c.field-meta.xml
<CustomField>
    <fullName>Primary_Reason_for_DoA__c</fullName>
    <description>Returns the primary reason for DoA. If more than 1 aspects have the same highest DoA level (e.g., ARR Discount and Invoice Period are COO level), then the primary reason is decided in the following order: Contraction, ARR Discount, One-off Discount, Invoice Period, Payment Period.</description>
    <formula>IF(
  ISBLANK( DoA_Approver__c ),
  &quot;Not Required&quot;,
  IF( TEXT(DoA_Level_Contraction__c) = &quot;Pricing Committee&quot;, &quot;Contraction&quot;,
  IF( TEXT(DoA_Level_ARR_Discount__c) = &quot;Pricing Committee&quot;, &quot;ARR Discount&quot;,
  IF( TEXT(DoA_Level_One_off_Discount__c) = &quot;Pricing Committee&quot;, &quot;One-off Discount&quot;,
  IF( TEXT(DoA_Level_Billing_Cadence__c) = &quot;Pricing Committee&quot;, &quot;Invoice Period&quot;,

    IF(TEXT(Ultimate_DoA_Level__c) = TEXT(DoA_Level_Contraction__c), &quot;Contraction&quot;,
    IF(TEXT(Ultimate_DoA_Level__c) = TEXT(DoA_Level_ARR_Discount__c), &quot;ARR Discount&quot;,
    IF(TEXT(Ultimate_DoA_Level__c) = TEXT(DoA_Level_One_off_Discount__c), &quot;One-off Discount&quot;,
    IF(TEXT(Ultimate_DoA_Level__c) = TEXT(DoA_Level_Billing_Cadence__c), &quot;Invoice Period&quot;, &quot;Payment Term&quot;
    ))))
  ))))
)</formula>
    <label>Primary Reason for DoA</label>
    <type>Text</type>
</CustomField>