metadata/force-app/main/default/objects/Delegation_of_Authority__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Delegation of Authorities</relationshipLabel>
    <relationshipName>Delegation_of_Authorities</relationshipName>
    <type>Lookup</type>
</CustomField>