metadata/force-app/main/default/objects/Delegation_of_Authority__c/fields/Requester_Comments__c.field-meta.xml
<CustomField>
    <fullName>Requester_Comments__c</fullName>
    <description>BODEV-929: Enable requesters to add comments on DoA approval submission.</description>
    <label>Requester Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>