metadata/force-app/main/default/objects/Delegation_of_Authority__c/fields/Shorter_term_and_discount__c.field-meta.xml
<CustomField>
    <fullName>Shorter_term_and_discount__c</fullName>
    <formula>AND(ISPICKVAL(Opportunity__r.Type,&apos;New Business-Enterprise Cloud&apos;),Opportunity__r.Netsuite_Term__c &lt; 36,Discount_ARR__c &gt;0, NOT(ISPICKVAL(Opportunity__r.Account.Company_Size_New__c,&apos;SMB&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is checked if the contract term is &lt; 3 years and ARR discount is added. Not applicable for SMB.</inlineHelpText>
    <label>Shorter term and discount? doa 25</label>
    <type>Checkbox</type>
</CustomField>