metadata/force-app/main/default/objects/Delegation_of_Authority__c/fields/SMB_Special_Deal_approval_required__c.field-meta.xml
<CustomField>
    <fullName>SMB_Special_Deal_approval_required__c</fullName>
    <formula>AND ( 
   ISPICKVAL(Opportunity__r.Account.Company_Size_New__c, &quot;SMB&quot;) , ISPICKVAL(Opportunity__r.Type, &quot;New Business-Enterprise Cloud&quot;), 
   OR  
     (Opportunity__r.Netsuite_Term__c &lt;24, Opportunity__r.Invoice_period__c &lt;3)
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SMB Special Deal approval required? test</label>
    <type>Checkbox</type>
</CustomField>