metadata/force-app/main/default/objects/Delegation_of_Authority__c/fields/Special_Billing_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Special_Billing_Scenario__c</fullName>
    <description>Used to capture the scenarios which change the contract and subscription start and end dates.</description>
    <label>Special Billing Scenario</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delayed Billing</fullName>
            </value>
            <value>
                <fullName>Delayed Subscription</fullName>
            </value>
            <value>
                <fullName>Free Month Discount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>