metadata/force-app/main/default/objects/Delegation_of_Authority__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>BODEV-1038: Opportunity Stage at which the DoA process ran.</description>
    <inlineHelpText>Opportunity Stage at which the DoA process ran.</inlineHelpText>
    <label>Stage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>