metadata/force-app/main/default/objects/Delegation_of_Authority__c/fields/Standard_Package_Name__c.field-meta.xml
<CustomField>
    <fullName>Standard_Package_Name__c</fullName>
    <description>BODEV-76: Text field to capture the name of the package applied to the Opportunity.</description>
    <label>Standard Package Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>