metadata/force-app/main/default/objects/Delegation_of_Authority__c/fields/Step_Up_25_of_Y1_ARR__c.field-meta.xml
<CustomField>
    <fullName>Step_Up_25_of_Y1_ARR__c</fullName>
    <label>Step Up: 25% of Y1 ARR test DOA 25</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>