metadata/force-app/main/default/objects/Delegation_of_Authority__c/fields/Step_Up_50_of_Y1_ARR__c.field-meta.xml
<CustomField>
    <fullName>Step_Up_50_of_Y1_ARR__c</fullName>
    <label>Step Up: 50% of Y1 ARR test DoA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>