metadata/force-app/main/default/objects/Delegation_of_Authority__c/fields/Step_Up_discount_on_products_Y2_Y3__c.field-meta.xml
<CustomField>
    <fullName>Step_Up_discount_on_products_Y2_Y3__c</fullName>
    <defaultValue>false</defaultValue>
    <description>test doa 25</description>
    <label>Step Up: Discount on products Y2 / Y3</label>
    <type>Checkbox</type>
</CustomField>