metadata/force-app/main/default/objects/Delegation_of_Authority__c/fields/Step_up_Final_year_ARR__c.field-meta.xml
<CustomField>
    <fullName>Step_up_Final_year_ARR__c</fullName>
    <label>Step up: Final year ARR test DOA 25</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>