metadata/force-app/main/default/objects/Delegation_of_Authority__c/fields/Step_Up_Total_ACV__c.field-meta.xml
<CustomField>
    <fullName>Step_Up_Total_ACV__c</fullName>
    <label>Step Up: Total ACV test DOA 25</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>