metadata/force-app/main/default/objects/Delegation_of_Authority__c/fields/Time_to_Approval_h__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Approval_h__c</fullName>
    <description>BODEV-743: Hours taken to finalize DoA approval request.</description>
    <formula>24 * (
  ( 5 * FLOOR( ( Approval_Finalized_Date_GMT__c - DATE( 1900, 1, 8) ) / 7) +
    MIN(5, 
      MOD( Approval_Finalized_Date_GMT__c - DATE( 1900, 1, 8) , 7)
      + MIN( 1,  MOD( Approval_Finalized__c - DATETIMEVALUE( &apos;1900-01-08 00:00:00&apos; ), 1 )  )
    ) 
  )
-
  ( 5 * FLOOR( ( Approval_Requested_Date_GMT__c - DATE( 1900, 1, 8) ) / 7) +
    MIN( 5,
      MOD( Approval_Requested_Date_GMT__c - DATE( 1996, 1, 1), 7 ) 
      + MIN( 1, MOD( Approval_Requested__c - DATETIMEVALUE( &apos;1900-01-08 00:00:00&apos; ), 1) ) 
    )
  )
)</formula>
    <inlineHelpText>Hours taken to finalize request. Weekends excluded.</inlineHelpText>
    <label>Time to Approval (h)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>