metadata/force-app/main/default/objects/Delegation_of_Authority__c/fields/Ultimate_DoA_Level__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_DoA_Level__c</fullName>
    <description>BODEV-76: Indicates who is the ultimate approver from whom approval is required.</description>
    <inlineHelpText>Indicates who is the ultimate approver from whom approval is required.</inlineHelpText>
    <label>Ultimate DoA Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DoA_Level</valueSetName>
    </valueSet>
</CustomField>