metadata/force-app/main/default/objects/Delegation_of_Authority__c/fields/Waive_Indexation__c.field-meta.xml
<CustomField>
    <fullName>Waive_Indexation__c</fullName>
    <description>Used to indicate if indexation is waived on opportunity or not.</description>
    <label>Waive Indexation?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>First Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>